Replace get(0) with getFirst for easier readiness