@@ -34,7 +34,7 @@ public class Grid {
   }
 
   public Grid(ArrayList<String> gridLines) throws Exception {
-    if (gridLines.get(0).length() < 2) {
+    if (gridLines.getFirst().length() < 2) {
       throw new Exception("Invalid grid size");
     }
     this.gridLines = gridLines;
